Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18694

Regression, [EXPLORER] Fix Windows XP compatibility

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell

    Description

      Since 0.4.15-dev-4596-g1aa95f3 our explorer did no longer startup on Windows XP due to kernel32 export, that is present only on 2k3.

      The following PR aims to fix that https://github.com/reactos/reactos/pull/4923

      Attachments

        Activity

          People

            TANGaming TANGaming
            reactosfanboy reactosfanboy
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: