[EXPLORER] Fix Windows XP compatibility (#4923)

CORE-18694
It regressed by 0.4.15-dev-4596-g 1aa95f389772901970369afa3abfb207df6f57f6